small spacing fixes

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -112,7 +112,7 @@ td:first-child {
 }
 
 .info {
-  font-style: var(--display-face);
+  font-family: var(--display-face);
   font-size: 2rem;
   border-radius: 50%;
   width: 2.75rem;
@@ -120,7 +120,7 @@ td:first-child {
   position: fixed;
   right: 1rem;
   top: 1.25rem;
-  letter-spacing: 0.07em;
+  letter-spacing: 0.06em;
 }
 
 aside {
